add search, item management, dashboard, init order

--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -5,6 +5,5 @@
      mockable
      testable
 -->
-{% include 'data/home/index' %}
-
-{% include 'presentation/simple/home/index', items: context.exports.items %}
+{% include 'data/items/index' %}
+{% include 'theme/simple/home/index', items: context.exports.items %}
