--- a/app/views/partials/data/items/update.liquid
+++ b/app/views/partials/data/items/update.liquid
@@ -4,7 +4,6 @@
 
   graphql result = 'items/update', args: args
 
-  assign operation_uuid = '' | uuid
-
-  export operation_uuid
+  assign last_operation_uuid = '' | uuid
+  export last_operation_uuid
 %}
