--- a/app/views/layouts/application.html.liquid
+++ b/app/views/layouts/application.html.liquid
@@ -7,20 +7,6 @@
   </head>
 
   <body class="antialiased font-sans leading-relaxed">
-
-    <div class="section hero">
-      <div class="container">
-        <div class="row">
-          <div class="u-full-width">
-            <a href="/">
-              <h1>product-store<small style="font-size: 0.5em"> 0.0.2-alpine</small></h1>
-            </a>
-          </div>
-        </div>
-
-        {{ content_for_layout }}
-        {% include 'layout/scripts' %}
-      </div>
-    </div>
+    {% include 'theme/simple/layout/main' %}
   </body>
 </html>
