--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -7,9 +7,10 @@ method: post
 
   if context.exports.item.valid
     include 'data/items/save', item: context.exports.item
-    include 'async-operation', uuid: context.exports.operation_uuid, success: '/app'
+    include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
   else
-    include 'presentation/simple/items/new', item: context.exports.item
+    include 'data/items/main'
+    include 'theme/simple/items/new', item: context.exports.item
   endif
 %}
 
