--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -1,5 +1,9 @@
 {% liquid
   include 'data/items/main', id: params.id
 
-  include 'presentation/simple/items/edit', item: context.exports.item
+  if context.exports.item
+    include 'theme/simple/items/edit', item: context.exports.item
+  else
+    include 'theme/simple/items/404'
+  endif
 %}
