--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -1,6 +1,6 @@
 {% liquid
   include 'data/items/main', id: params.id
-  include 'data/items/wiki', name: context.exports.item.properties.name
+  include 'theme/simple/items/show', item: context.exports.item
 
-  include 'presentation/simple/items/show', item: context.exports.item
+  echo 'more items like this ...'
 %}
