--- a/app/views/partials/data/items/validate.liquid
+++ b/app/views/partials/data/items/validate.liquid
@@ -5,6 +5,7 @@
   assign tags = item.properties.tags | split: ','
   assign properties = item.properties
   assign properties = properties | add_hash_key: 'tags', tags
+  assign properties = properties | add_hash_key: 'owner', context.session.current_user_id
 %}
 
 {% liquid
@@ -19,8 +20,19 @@
   endif
 
   if item.properties.description == ""
+    include 'data/items/wiki', name: item.properties.name
+
+    assign properties = properties | add_hash_key: 'description', context.exports.wiki.about
+  endif
+
+  if item.properties.description == ""
     assign valid = false
     assign perrors = perrors | add_hash_key: "description", CANT_BE_BLANK
+  endif
+
+  if item.properties.owner == "" or item.properties.owner == null
+    assign valid = false
+    assign perrors = perrors | add_hash_key: "owner", CANT_BE_BLANK
   endif
 
   assign item = item | add_hash_key: 'errors', errors
