--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -1,26 +1,21 @@
+<style>
+  .menu * { display: inline-block; }
+</style>
 <div class="section hero">
   <div class="container">
     <div class="row">
-
-      <div class="six columns">
-        <a href="/"><h1>item-store<small style="font-size: 0.5em"> 0.0.2-alpine</small></h1></a>
-      </div>
-
-      <div class="two columns">
-        <a href="/items/new" class="button button-primary">List your item</a>
-      </div>
-
+      <a href="/"><h1>item-store<small style="font-size: 0.5em"> 0.0.2-alpine</small></h1></a>
+    </div>
+    <div class="row menu">
+      <a href="/items/new" class="button button-primary">List your item</a>
       {% if context.session.current_user_id  %}
-        <div class="two columns">
-          <form action="/sessions/destroy" method="post">
-            {% include 'authenticity_token' %}
-            <input name="" type="submit" value="log out {% print context.session.current_user_id %}"/>
-          </form>
-        </div>
+        <a href="/dashboard" class=button>dashboard</a>
+        <form action="/sessions/destroy" method="post">
+          {% include 'authenticity_token' %}
+          <input name="" type="submit" value="log out {% print context.session.current_user_id %}"/>
+        </form>
       {% else %}
-        <div class="two columns">
-          <a href="/sessions/new" class=button>login</a>
-        </div>
+        <a href="/sessions/new" class=button>login</a>
       {% endif %}
     </div>
 
