add dashboad/orders and item checkout

--- a/app/views/pages/orders/new.liquid
+++ b/app/views/pages/orders/new.liquid
@@ -1,4 +1,7 @@
 {% liquid
   include 'data/items/main', id: context.params.item_id
-  include 'theme/simple/orders/new', item: context.exports.item
+  include 'data/orders/validate', item: context.exports.item, current_user_id: context.session.current_user_id
+
+  echo context.exports.order
+  include 'theme/simple/orders/new', item: context.exports.item, order: context.exports.order
 %}
