--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -1,3 +1,6 @@
 <h4>dashboard</h4>
 
-<a href="/dashboard/items">your items</a>
+<ul>
+  <li><a href="/dashboard/items">your items</a></li>
+  <li><a href="/dashboard/orders">your orders</a></li>
+</ul>
