--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -34,7 +34,7 @@
 
     <form action="/orders/new" method="get">
       <input type="hidden" name="item_id" value="{% print item.id %}">
-      <input type="submit" value="buy for $100" class="button-primary">
+      <input type="submit" value="buy for {% echo item.properties.price | pricify %}" class="button-primary">
     </form>
   </div>
 </div>
