--- a/app/views/pages/dashboard/items/index.liquid
+++ b/app/views/pages/dashboard/items/index.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  include 'data/dashboard/main', items: 100
+  include 'data/dashboard/items', limit: 100, current_user_id: context.session.current_user_id
   include 'theme/simple/dashboard/items/index', items: context.exports.items
 %}
