--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -3,7 +3,7 @@ method: post
 ---
 
 {% liquid
-  include 'data/items/validate', item: params.item
+  include 'data/items/validate', item: params.item, current_user_id: context.session.current_user_id
 
   if context.exports.item.valid
     include 'data/items/save', item: context.exports.item
