--- a/app/views/partials/data/dashboard/main.liquid
+++ b/app/views/partials/data/dashboard/main.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  graphql items = 'items/search', limit: items, owner: context.session.current_user_id | fetch: 'items'
+  graphql items = 'items/search', limit: items, owner: current_user_id | fetch: 'items'
   export items
 %}
