--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -4,7 +4,7 @@
 <div class="section hero">
   <div class="container">
     <div class="row">
-      <a href="/"><h1>item-store<small style="font-size: 0.5em"> 0.0.2-alpine</small></h1></a>
+      <a href="/"><h1>items-store-mvp<small style="font-size: 0.5em"> 0.0.2-alpine</small></h1></a>
     </div>
     <div class="row menu">
       <a href="/items/new" class="button button-primary">List your item</a>
