remove context.session form layo in favour of arg

--- a/app/views/layouts/application.html.liquid
+++ b/app/views/layouts/application.html.liquid
@@ -7,6 +7,6 @@
   </head>
 
   <body class="antialiased font-sans leading-relaxed">
-    {% include 'theme/simple/layout/main' %}
+    {% include 'theme/simple/layout/main', current_user_id: context.session.current_user_id %}
   </body>
 </html>
