--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -593,6 +593,10 @@ body {
 
 .container {
   width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 @media (min-width: 640px) {
@@ -17238,6 +17242,10 @@ body {
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   @media (min-width: 640px) {
@@ -33636,6 +33644,10 @@ body {
 @media (min-width: 768px) {
   .md\:container {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   @media (min-width: 640px) {
@@ -50034,6 +50046,10 @@ body {
 @media (min-width: 1024px) {
   .lg\:container {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   @media (min-width: 640px) {
@@ -66432,6 +66448,10 @@ body {
 @media (min-width: 1280px) {
   .xl\:container {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   @media (min-width: 640px) {
@@ -82830,6 +82850,10 @@ body {
 @media (min-width: 1410px) {
   .xxl\:container {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   @media (min-width: 640px) {
