--- a/app/views/partials/layout/head.liquid
+++ b/app/views/partials/layout/head.liquid
@@ -3,5 +3,7 @@
 <meta content="authenticity_token" name="csrf-param">
 <meta content="{{ form_authenticity_token }}" name="csrf-token">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>platformOS</title>
-<link rel="stylesheet" href="{{ 'styles/app.css' | asset_url }}">
+
+<link rel="stylesheet" href="{{ 'css/app.css' | asset_url }}">
+
+<title>My Store</title>
