--- a/app/views/partials/layout/scripts.liquid
+++ b/app/views/partials/layout/scripts.liquid
@@ -1,2 +1,1 @@
-<script src="{{ 'scripts/vendor.js' | asset_url }}"></script>
-<script src="{{ 'scripts/app.js' | asset_url }}"></script>
+<script src="{{ 'js/app.js' | asset_url }}"></script>
