--- a/app/views/partials/theme/simple/home/search.liquid
+++ b/app/views/partials/theme/simple/home/search.liquid
@@ -1,14 +1,7 @@
-<style>
-  input[name="k"] {
-    font-size: 1.5em;
-    padding: 25px;
-    color: #333;
-  }
-</style>
-<div class="row">
-  <form action="/s">
-    <div class="twelve columns">
-      <input class="u-full-width" name="k" type="text" value="{% echo query.k %}{% if query.tag %} tag:{%  print query.tag %}{% endif %}" placeholder="search..."/>
-    </div>
-  </form>
-</div>
+<form action="/s">
+  <input class="form-input my-4 block w-full"
+    name="k"
+    type="text"
+    value="{% echo query.k %}{% if query.tag %} tag:{%  print query.tag %}{% endif %}"
+    placeholder="Search"/>
+</form>
