--- a/app/views/partials/data/dashboard/items.liquid
+++ b/app/views/partials/data/dashboard/items.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  graphql items = 'items/search', limit: limit, owner: current_user_id | fetch: 'items'
+  graphql items = 'items/search', limit: limit, owner: seller | fetch: 'items'
   export items
 %}
