--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -1,6 +1,22 @@
 <h4>{% echo 'app.dashboard' | t %}</h4>
 
-<ul>
-  <li><a href="/dashboard/items">{{ 'app.your-items' | t }}</a></li>
-  <li><a href="/dashboard/orders">{{ 'app.your-orders' | t }}</a></li>
-</ul>
+<style>
+  div.dashboard { display: flex }
+  div.dashboard div { flex: auto; width: 50%}
+</style>
+
+<div class='dashboard'>
+  <div>
+    <h5>{{ 'app.selling' | t }}</h5>
+    <ul>
+      <li><a href="/dashboard/sell/orders">{{ 'app.your-orders' | t }}</a></li>
+      <li><a href="/dashboard/sell/items">{{ 'app.your-items' | t }}</a></li>
+    </ul>
+  </div>
+  <div>
+    <h5>{{ 'app.buying' | t }}</h5>
+    <ul>
+      <li><a href="/dashboard/buy/orders">{{ 'app.your-orders' | t }}</a></li>
+    </ul>
+  </div>
+</div>
