--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -1,11 +1,12 @@
-<h5><a href="/dashboard">{% echo 'app.dashboard' | t %}</a> / {% echo 'app.orders' | t %}</h5>
+<h5><a href="/dashboard">{% echo 'app.dashboard' | t %}</a> / {{ 'app.' | append: role | t }} / {% echo 'app.orders' | t %}</h5>
 
 <table>
   <thead>
     <tr>
-      <th>{{ "app.item_id" | t }}</th>
       <th>{{ "app.created_at" | t }}</th>
+      <th>{{ "app.item_id" | t }}</th>
       <th>{{ "app.buyer" | t }}</th>
+      <th>{{ "app.seller" | t }}</th>
       <th>{{ "app.status" | t }}</th>
       <th>{{ "app.paid_at" | t }}</th>
     </tr>
@@ -13,10 +14,26 @@
   {% for order in orders.results %}
     <tr>
       <td>{% echo order.created_at | l %}</td>
-      <td>{% print order.properties.item_id %}</td>
+      <td><a href="/items/show?id={% echo order.properties.item_id %}">{% print order.item.properties.name %}</a></td>
       <td>{% print order.properties.buyer %}</td>
+      <td>{% print order.properties.seller %}</td>
       <td>{% print order.properties.status %}</td>
-      <td>{% echo order.properties.paid_at %}</td>
+      <td>
+        {% echo order.properties.paid_at %}
+        {% if order.properties.paid_at == null and role == 'seller' %}
+          <form action="/dashboard/orders/mark-as-paid" method="post">
+            {% include 'authenticity_token' %}
+            <input name="" type="submit" value="{% echo 'app.mark-as-paid' | t %}"/>
+          </form>
+        {% endif %}
+
+        {% if order.properties.paid_at == null and role == 'buyer' %}
+          <form action="/dashboard/orders/pay" method="post">
+            {% include 'authenticity_token' %}
+            <input name="" type="submit" value="{% echo 'app.pay' | t %}"/>
+          </form>
+        {% endif %}
+      </td>
     </tr>
   {% endfor %}
 </table>
