Rename data into lib

--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -5,5 +5,5 @@
      mockable
      testable
 -->
-{% include 'data/items/index' %}
+{% include 'lib/items/index' %}
 {% include 'theme/simple/home/index', items: context.exports.items %}
