--- a/app/views/pages/dashboard/buy/orders/mark-as-paid.liquid
+++ b/app/views/pages/dashboard/buy/orders/mark-as-paid.liquid
@@ -3,6 +3,6 @@ method: post
 ---
 <!-- find order  -->
 {% liquid
-  include 'data/dashboard/orders', id: context.params.order_id, current_user_id: context.session.current_user_id
+  include 'lib/dashboard/orders', id: context.params.order_id, current_user_id: context.session.current_user_id
   echo context.exports
 %}
