--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  include 'data/items/main', id: params.id
+  include 'lib/items/main', id: params.id
   include 'theme/simple/items/show', item: context.exports.item
 
   echo 'more items like this ...'
