--- a/app/views/partials/async-operation.liquid
+++ b/app/views/partials/async-operation.liquid
@@ -4,6 +4,6 @@
   setTimeout(
     function() {
       window.location = "{{ success }}"
-    }, 100
+    }, {{ wait | default: 500 }}
   )
 </script>
