--- a/app/views/pages/api/items/index.json.liquid
+++ b/app/views/pages/api/items/index.json.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  include 'data/items/index'
+  include 'lib/items/index'
   include 'theme/json/home/index', items: context.exports.items
 %}
