--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,9 +1,6 @@
-<!--
-     event sourcing
-     asynchronous command and synchronous validation
-     JS login to monitor background job status then reload
-     mockable
-     testable
--->
-{% include 'lib/items/index' %}
-{% include 'theme/simple/home/index', items: context.exports.items %}
+{% liquid
+  include 'data/items/index'
+  include 'theme/simple/home/index', items: context.exports.items
+
+  include 'data/events/create-item'
+%}
