--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -3,13 +3,14 @@ method: post
 ---
 
 {% liquid
-  include 'data/items/validate', item: params.item, current_user_id: context.session.current_user_id
+  include 'lib/items/validate', item: params.item, current_user_id: context.session.current_user_id
 
   if context.exports.item.valid
-    include 'data/items/save', item: context.exports.item
+    include 'lib/items/save', item: context.exports.item
     include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
+    include 'lib/events/item-created', item: context.exports.item
   else
-    include 'data/items/main'
+    include 'lib/items/main'
     include 'theme/simple/items/new', item: context.exports.item
   endif
 %}
