--- a/app/views/pages/items/delete.liquid
+++ b/app/views/pages/items/delete.liquid
@@ -3,7 +3,7 @@ method: post
 ---
 
 {% liquid
-  include 'data/items/delete', id: params.id
+  include 'lib/items/delete', id: params.id
   include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
 %}
 
