--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,6 +1,6 @@
 {% liquid
-  include 'data/items/index'
+  include 'lib/items/index'
   include 'theme/simple/home/index', items: context.exports.items
 
-  include 'data/events/create-item'
+  include 'lib/events/create-item'
 %}
