--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -2,5 +2,6 @@
   include 'lib/items/main', id: params.id
   include 'theme/simple/items/show', item: context.exports.item
 
-  echo 'more items like this ...'
+  assign object_id = 'items-show#' | append: context.exports.item.id
+  include 'lib/events/create-event', type: 'page_visited', actor_id: context.session.current_user_id, object_id: object_id
 %}
