--- a/app/views/partials/lib/events/create-event.liquid
+++ b/app/views/partials/lib/events/create-event.liquid
@@ -1,11 +1,10 @@
-{% background "bg-task-name" %}
+{% background "bg-task-name", type: type, object_id: object_id, actor_id: actor_id %}
 {% liquid
   assign registry = 'event'
-  assign event_type = 'page_visited'
-  assign object_id = 'home_page'
 
-  include 'lib/events/build', type: event_type, actor_id: context.session.current_user_id, object_id: object_id, registry: registry
+  include 'lib/events/build', type: type, actor_id: actor_id, object_id: object_id, registry: registry
   include 'lib/events/validate', event: context.exports[registry]
+
   if context.exports[registry].valid
     include 'lib/events/create', event: context.exports[registry], registry: registry
     include 'lib/events/broadcast', event: context.exports[registry]
