--- a/app/views/partials/lib/items/save.liquid
+++ b/app/views/partials/lib/items/save.liquid
@@ -1,8 +1,11 @@
 <!-- push to background -->
 {% liquid
-  graphql result = 'items/create', args: item.properties
+  graphql item = 'items/create', args: item.properties | fetch: 'model_create'
+
+  log item
 
   assign last_operation_uuid = '' | uuid
   export last_operation_uuid
+  export item
 %}
 
