--- a/app/views/pages/items/create.liquid
+++ b/app/views/pages/items/create.liquid
@@ -8,7 +8,8 @@ method: post
   if context.exports.item.valid
     include 'lib/items/save', item: context.exports.item
     include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/'
-    include 'lib/events/item-created', item: context.exports.item
+
+    include 'lib/events/create-event', type: 'item_created', actor_id: context.session.current_user_id, object_id: object_id
   else
     include 'lib/items/main'
     include 'theme/simple/items/new', item: context.exports.item
