--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -10,17 +10,18 @@
       </a>
 
       <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-        <a href="/items/new" class="mr-5 hover:text-gray-900">{% echo 'app.list-your-item' | t %}</a>
+        <a href="/items/new" class="mr-5 hover:text-gray-900">{{ 'app.list-your-item' | t }}</a>
 
         {% if context.session.current_user_id  %}
           <a href="/dashboard" class="mr-5 hover:text-gray-900">{{ 'app.dashboard' | t }}</a>
 
           <form action="/sessions/destroy" method="post">
             {% include 'authenticity_token' %}
-            <input name="" type="submit" value="log out {% print context.session.current_user_id %}"/>
+            <input name="" type="submit" value="log out {{ context.session.current_user_id }}"/>
           </form>
         {% else %}
-          <a href="/sessions/new" class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">{{ 'app.login' }}
+          <a href="/sessions/new" class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">
+            {{ 'app.login' | t }}
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
