Create session for real user

--- a/app/views/pages/users/create.liquid
+++ b/app/views/pages/users/create.liquid
@@ -3,11 +3,9 @@ slug: users
 method: post
 ---
 {% liquid
-  include 'lib/users/validate', object: context.params.user
-
+  include 'lib/users/create', user: context.params.user
   if context.exports.object.valid
-    include 'lib/users/save', object: context.exports.object
-    echo context.exports.object.id
+    redirect_to '/'
   else
     include 'theme/simple/users/new', object: context.exports.object
   endif
