--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -12,12 +12,13 @@
     <nav class="flex flex-wrap items-center justify-center text-base md:ml-auto">
       <a href="/items/new" class="mr-5 hover:text-gray-900">{{ 'app.list-your-item' | t }}</a>
 
-      {% if context.session.current_user_id  %}
+
+      {% if context.current_user.id  %}
       <a href="/dashboard" class="mr-5 hover:text-gray-900">{{ 'app.dashboard' | t }}</a>
 
       <form action="/sessions/destroy" method="post">
         {% include 'authenticity_token' %}
-        <input name="" type="submit" value="log out {{ context.session.current_user_id }}" />
+        <input name="" type="submit" value="log out {{ context.current_user.id }}" />
       </form>
       {% else %}
       <a href="/sessions/new"
