--- a/app/views/layouts/application.html.liquid
+++ b/app/views/layouts/application.html.liquid
@@ -4,7 +4,7 @@
     {% include 'layout/head' %}
   </head>
 
-  <body class="antialiased font-sans leading-relaxed">
+  <body class="antialiased font-sans leading-normal">
     {% include 'theme/simple/layout/main', current_user_id: context.session.current_user_id %}
   </body>
 </html>
