--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -1,3 +1,19 @@
-.btn {
-  @apply font-bold capitalize px-4 py-2 border rounded-sm;
+.button {
+  @apply flex text-white items-center bg-blue-500 border-0 py-2 px-6 rounded;
+}
+
+.button:focus {
+  @apply outline-none;
+}
+
+.button:hover {
+  @apply bg-blue-600;
+}
+
+.button-secondary  {
+  @apply text-blue-500 bg-white border-blue-500 border-2;
+}
+
+.button-secondary:hover  {
+  @apply bg-blue-100 border-blue-600;
 }
