--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -1,7 +1,9 @@
 <header class="text-gray-700 body-font">
   <div class="container flex flex-col flex-wrap items-center p-5 mx-auto md:flex-row">
-    <a class="flex items-center mb-4 font-medium text-gray-900 title-font md:mb-0">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-white bg-blue-500 rounded-full" viewBox="0 0 24 24">
+    <a class="flex items-center mb-4 font-medium text-gray-900 title-font md:mb-0" href="/">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
+        stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-white bg-blue-500 rounded-full"
+        viewBox="0 0 24 24">
         <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
       </svg>
       <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
@@ -11,19 +13,21 @@
       <a href="/items/new" class="mr-5 hover:text-gray-900">{{ 'app.list-your-item' | t }}</a>
 
       {% if context.session.current_user_id  %}
-        <a href="/dashboard" class="mr-5 hover:text-gray-900">{{ 'app.dashboard' | t }}</a>
+      <a href="/dashboard" class="mr-5 hover:text-gray-900">{{ 'app.dashboard' | t }}</a>
 
-        <form action="/sessions/destroy" method="post">
-          {% include 'authenticity_token' %}
-          <input name="" type="submit" value="log out {{ context.session.current_user_id }}"/>
-        </form>
+      <form action="/sessions/destroy" method="post">
+        {% include 'authenticity_token' %}
+        <input name="" type="submit" value="log out {{ context.session.current_user_id }}" />
+      </form>
       {% else %}
-        <a href="/sessions/new" class="inline-flex items-center px-3 py-1 mt-4 text-base bg-gray-200 border-0 rounded focus:outline-none hover:bg-gray-300 md:mt-0">
-          {{ 'app.login' | t }}
-          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-          </svg>
-        </a>
+      <a href="/sessions/new"
+        class="inline-flex items-center px-3 py-1 mt-4 text-base bg-gray-200 border-0 rounded focus:outline-none hover:bg-gray-300 md:mt-0">
+        {{ 'app.login' | t }}
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+          <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+      </a>
       {% endif %}
     </nav>
 
